# Adzzat-agent

./: .env.example  README.md  main.py  project.md  pyproject.toml
adzzat_demo/: __init__.py  agent.py  app.py  logging_utils.py  orchestrator.py  schemas.py  tools.py
